feat: backend update api and swagger
